Started creating Diet plan-main Created Diet plan-main Done creating the Diet plan-main Resolved: Warnings Resolved: Warnings and errors Resolved: Warnings and errors Added the fonts Added fat percentage calculator Minor changes to fat percentage calculator